HTML/css/styles.css
body, html {
    margin: 0;
    font-family: sans-serif;
    height: 100%;
    box-sizing: border-box;
    overflow: auto;

}

.image-container {
    background-color:black;
    background-image: url("../images/snowboarderShreddingPow.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    height: 100%;
    width: 100%;
    background-position: center;
    background-size: cover;
    position:relative;
    z-index: 0;
    display: block;
    
}

.button {
    position:fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border:cadetblue;
    color:darkcyan;
    padding: 13px 15px;
    text-align: center;
    font-size: 25px;
    display: block;
    cursor: pointer;
    border-radius: 12px;
    background-color: rgb(6, 13, 38);
    transition: ease-out .3s;
    outline: none;
    z-index: 1;
    
}

.button:hover {
    box-shadow: inset 250px 0 0 0 black;
    cursor: pointer;
    color: darkcyan;
}



.float-container {
    position: relative;
    border: 1px black;
    display: none; 
    flex-direction:column; 
    justify-content: center; 
    align-items: center; 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: fit-content;
    position: absolute;
}

.float-child {
    border: 1px cadetblue; 
    color:darkcyan;
    padding: 13px 15px;
    display: flex;
    justify-content: center;
    align-items: center; 
    width: fit-content;
}


.box {
    display: block;
    text-align: center;
    z-index: 4;
    color:darkcyan; 
    padding: 10px 15px;
    background-color: rgb(6, 13, 38);
    border-radius: 12px;
    border: 1px solid black;
    justify-content: center; 
    align-items: center; 
    white-space: pre-wrap;
}

